--- a/public/css/adminx.css
+++ b/public/css/adminx.css
@@ -1,3 +1,6 @@
+a, button{
+    cursor: pointer;
+}
 /*********************************************************************************** лайаут */
 .xLayoutHeader{
     background-color: #bdbdbd;
